# mapgraphlib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Graph.hpp  declarations.hpp  graph.hpp  iterator.hpp
include/algorithms/: dijkstra.hpp
include/visit/: dfsvisit.hpp
tests/: basic_operations.cpp  visiting.cpp
